DFS implementation started

--- a/python/planning_algos/rrt.ipynb
+++ b/python/planning_algos/rrt.ipynb
@@ -54,7 +54,7 @@
     "        self.predecessor = None\n",
     "\n",
     "    def __str__(self):\n",
-    "        return(f\"loc : {self.loc}\\nstatus : {self.is_free}\\n\")\n"
+    "        return(f\"loc : {self.loc}\")\n"
    ]
   },
   {
