lined list sorted

--- a/python/Miscellaneous/linked_lists.ipynb
+++ b/python/Miscellaneous/linked_lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,29 +26,40 @@
     "\n",
     "    def add_node(self, val:int):\n",
     "        curr_node = self.head\n",
+    "        new_node = Node(val)\n",
     "\n",
     "        while curr_node.next is not None:\n",
+    "            if curr_node.next.val > val:\n",
+    "                tmp = curr_node.next\n",
+    "                curr_node.next = new_node\n",
+    "                new_node.next = tmp\n",
+    "                return\n",
     "            curr_node = curr_node.next\n",
+    "            \n",
     "\n",
-    "        curr_node.next = Node(val)\n",
+    "        curr_node.next = new_node\n",
     "\n",
-    "ll = LinkedList()\n"
+    "\n",
+    "ll = LinkedList()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> 1 --> 2 --> \n"
+      "The slowest run took 5.16 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "2.12 ms ± 1.02 ms per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "%timeit ll.add_node(6)"
+   ]
   }
  ],
  "metadata": {
