--- a/python/Miscellaneous/pass_the_baton.ipynb
+++ b/python/Miscellaneous/pass_the_baton.ipynb
@@ -27,24 +27,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 2]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[3, 2]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "n = 4\n",
-    "t = 5\n",
+    "class PassBaton():\n",
+    "    @staticmethod\n",
+    "    def run(n:int, t:int):\n",
+    "        # Calculate the direction of baton pass\n",
+    "        dir = dir = +1 if ((t-1)//(n-1))%2 == 0 else -1\n",
     "\n",
-    "dir = +1 if ((t-1)//(n-1))%2 == 0 else -1\n",
-    "f = ((t-1)%(n-1))+1 if dir==1 else n-((t-1)%(n-1)) \n",
-    "print([f, f+dir])"
+    "        # Calculate the friend who holds the baton\n",
+    "        friend = ((t-1)%(n-1))+1 if dir==1 else n-((t-1)%(n-1)) \n",
+    "\n",
+    "        return([friend, friend+dir])\n",
+    "    \n",
+    "PassBaton.run(n=4, t=5)"
    ]
   }
  ],
