--- a/python/miscellaneous/password_vowel_consonant.ipynb
+++ b/python/miscellaneous/password_vowel_consonant.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,26 +34,26 @@
        "-1.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
     "class VerifyPassword():\n",
-    "    VOWELS = np.array([ord('a'), ord('e'), ord('i'), ord('o'), ord('u')], dtype=np.int8)\n",
+    "    VOWELS = [ord('a'), ord('e'), ord('i'), ord('o'), ord('u')]\n",
     "    @staticmethod\n",
     "    def run(password:str) -> int:\n",
-    "        vowels = np.array([], dtype=np.int8)\n",
-    "        consonants = np.array([], dtype=np.int8)\n",
+    "        vowels = []\n",
+    "        consonants = []\n",
     "\n",
     "        num_operations = []\n",
     "\n",
     "        for p in password:\n",
     "            if ord(p) not in VerifyPassword.VOWELS:\n",
-    "                consonants = np.append(consonants, ord(p))\n",
+    "                consonants.append(ord(p))\n",
     "                min_dist_to_vowel = VerifyPassword.VOWELS - ord(p)\n",
+    "                \n",
     "                idx_min = np.abs(min_dist_to_vowel).argmin()\n",
     "                # print(p, min_dist_to_vowel[idx_min], chr(ord(p) + min_dist_to_vowel[idx_min]))\n",
     "                num_operations.append(abs(min_dist_to_vowel[idx_min]))\n",
@@ -76,6 +76,13 @@
     "\n",
     "VerifyPassword.run(\"aeiozz\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -94,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
