verify password complete

--- a/python/miscellaneous/password_verification.ipynb
+++ b/python/miscellaneous/password_verification.ipynb
@@ -18,23 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 97 101 105 111] [122 122]\n"
+      "vowels : 3\n",
+      "consonants : 8\n",
+      "letters to change : 3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-1.0"
+       "2"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,43 +48,40 @@
     "    def run(password:str) -> int:\n",
     "        vowels = []\n",
     "        consonants = []\n",
-    "\n",
-    "        num_operations = []\n",
+    "        closest_dist_to_vowel = []\n",
     "\n",
     "        for p in password:\n",
     "            if ord(p) not in VerifyPassword.VOWELS:\n",
     "                consonants.append(ord(p))\n",
-    "                min_dist_to_vowel = VerifyPassword.VOWELS - ord(p)\n",
+    "\n",
+    "                min_dist_to_vowel = 100\n",
+    "                for v in VerifyPassword.VOWELS:\n",
+    "                    dist_to_vowel = abs(v - ord(p))\n",
+    "                    if dist_to_vowel < min_dist_to_vowel:\n",
+    "                        min_dist_to_vowel = dist_to_vowel\n",
     "                \n",
-    "                idx_min = np.abs(min_dist_to_vowel).argmin()\n",
-    "                # print(p, min_dist_to_vowel[idx_min], chr(ord(p) + min_dist_to_vowel[idx_min]))\n",
-    "                num_operations.append(abs(min_dist_to_vowel[idx_min]))\n",
+    "                closest_dist_to_vowel.append(min_dist_to_vowel)\n",
     "\n",
     "            else:\n",
-    "                vowels = np.append(vowels, ord(p))\n",
+    "                vowels.append(ord(p))\n",
     "\n",
-    "        print(vowels, consonants)\n",
+    "        closest_dist_to_vowel = sorted(closest_dist_to_vowel)\n",
+    "        print(f\"vowels : {len(vowels)}\\nconsonants : {len(consonants)}\")\n",
+    "        print(f\"letters to change : {abs((len(vowels)-len(consonants))//2)}\")\n",
     "\n",
-    "        if vowels.shape == consonants.shape:\n",
+    "        if len(vowels) == len(consonants):\n",
     "            return 0\n",
     "        \n",
-    "        elif vowels.shape > consonants.shape:\n",
-    "            ans = (vowels.shape[0] - consonants.shape[0]) - (len(password)/2)\n",
-    "            return ans\n",
+    "        elif len(vowels) > len(consonants):\n",
+    "            num_operations = (len(vowels)-len(consonants))//2\n",
+    "            return num_operations\n",
     "            \n",
     "        else:\n",
-    "            operations = (vowels.shape[0] - consonants.shape[0]) - (len(password)/2)\n",
-    "            return sum(sorted(num_operations)[:operations])\n",
+    "            num_operations = sum(closest_dist_to_vowel[:(len(consonants)-len(vowels))//2])\n",
+    "            return num_operations\n",
     "\n",
-    "VerifyPassword.run(\"aeiozz\")"
+    "VerifyPassword.run(\"aeibfjkklmn\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
