--- a/python/miscellaneous/vowels.ipynb
+++ b/python/miscellaneous/vowels.ipynb
@@ -21,16 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 4]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[2, 3, 0]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +60,7 @@
     "\n",
     "            else:\n",
     "                dp_array[dp_idx] += dp_array[dp_idx-1]\n",
-    "\n",
+    "        print(dp_array)\n",
     "        ans = []\n",
     "        for q in queries:\n",
     "            start_idx, end_idx = q.split('-')\n",
