updated crabi code

--- a/python/miscellaneous/crabi_robotics/crabi.ipynb
+++ b/python/miscellaneous/crabi_robotics/crabi.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 2 systems $S1, S2$ which give the pose $[x, y, \\theta]$. $S1$ is static and $S2$ moves along with the robot. The pose is the location and orientation of $S1$ in $S2$’s frame. $S1$ gives the measurement at $2.5 Hz$ and $S2$ at $10 Hz$. $S1$ is twice as accurate as $S2$. $S1$ is at location $[10, 10, 100]$ in the global frame of reference. Write a code to give the position of S2 in the global frame."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
